syntax = "proto3";

package user;
option go_package = "github.com/JJnvn/Software-Arch-CPRoom/backend/proto;proto";


service UserService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc GetBookingHistory(GetBookingHistoryRequest) returns (GetBookingHistoryResponse);
  rpc SetPreferences(SetPreferencesRequest) returns (SetPreferencesResponse);
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  map<string, string> preferences = 4;
}

message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message UpdateProfileResponse {
  bool success = 1;
}

message GetBookingHistoryRequest {
  string user_id = 1;
}

message GetBookingHistoryResponse {
  repeated Booking bookings = 1;
}

message Booking {
  string booking_id = 1;
  string room_id = 2;
  string start_time = 3;
  string end_time = 4;
  string status = 5;
}

message SetPreferencesRequest {
  string user_id = 1;
  map<string, string> preferences = 2;
}

message SetPreferencesResponse {
  bool success = 1;
}
